--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -169,28 +169,8 @@
     }
    ],
    "source": [
-    "# Checking the number of mice.\n",
+    "# Checking the number of mice#\n",
     "len(study_data_complete[\"Mouse ID\"].unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "249"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Checking the number of mice.\n"
    ]
   },
   {
